# integrators2

./: .gitignore  CMakeLists.txt  GridIntegrate.cpp  GridIntegrate.hpp  IntegrationBound.hpp  MontecarloIntegrate.cpp  MontecarloIntegrate.hpp  README.md  SobolIntegrate.cpp  SobolIntegrate.hpp  ValueWithError.hpp  compute_sphere_overlap.cpp  compute_sphere_overlap.hpp  compute_unitball_volume.cpp  compute_unitball_volume.hpp  integrate.cpp  make_plots.cpp  ndcrescent.cpp
